changed the break glass component

--- a/server/components/category-filter/category-filter.liquid
+++ b/server/components/category-filter/category-filter.liquid
@@ -1,11 +1,9 @@
 <div class="category-filter">
-  <h2>Filter Projecten</h2>
-  
   <div id="filterButtons" class="filter-buttons">
     <div class="radio-group">
       <input type="radio" id="category-all" name="category-filter" value="all" class="filter-radio" checked>
       <label for="category-all" class="filter-btn" data-category="all">
-        Alle Projecten
+        Alles
       </label>
     </div>
     
@@ -18,19 +16,4 @@
       </div>
     {% endfor %}
   </div>
-  
-  <div id="visibleCount" class="visible-count">
-    {% if allData.projects.size > 0 %}
-      {{ allData.projects.size }} projecten zichtbaar (alle categorieën)
-    {% else %}
-      0 projecten zichtbaar
-    {% endif %}
-  </div>
-  
-  {% comment %} Debug info for development {% endcomment %}
-  {% if categories.size > 0 %}
-    <div class="category-debug" style="font-size: 0.8em; color: #666; margin-top: 1rem;">
-      <strong>Available categories:</strong> {{ categories | join: ', ' }}
-    </div>
-  {% endif %}
 </div>
