--- a/client/index.css
+++ b/client/index.css
@@ -17,6 +17,7 @@
 /* @import "../server/components/full-width-card/full-width-card.css"; */
 /* @import "../server/components/project-card/project-card.css"; */
 @import "../server/components/project-item/project-item.css";
-@import "../server/components/text-slider/text-slider.css";
+/* @import "../server/components/text-slider/text-slider.css"; */
 @import "../server/components/break-glass/break-glass.css";
 @import "../server/components/submarine/submarine.css";
+@import "../server/components/theatre-slider/theatre-slider.css";
