--- a/server/components/theatre-slider/theatre-slider.liquid
+++ b/server/components/theatre-slider/theatre-slider.liquid
@@ -3,12 +3,16 @@
     <div class='theatre-row-1'>
         <div class="scroller" data-direction="left" data-speed="fast">
             <div class="scroller__inner">
-                <img src="https://images.unsplash.com/photo-1582192903020-8a5e59dcdcf2?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDkxMjUwNDB8&ixlib=rb-4.1.0&q=85"
-                    alt="chair" />
-                <img src="https://images.unsplash.com/photo-1582192903020-8a5e59dcdcf2?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDkxMjUwNDB8&ixlib=rb-4.1.0&q=85"
-                    alt="chair" />
-                <img src="https://images.unsplash.com/photo-1582192903020-8a5e59dcdcf2?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDkxMjUwNDB8&ixlib=rb-4.1.0&q=85"
-                    alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
             </div>
         </div>
     </div>
@@ -16,28 +20,31 @@
     <div class='theatre-row-2'>
         <div class="scroller" data-direction="right" data-speed="slow">
             <div class="scroller__inner">
-                <img src="https://images.unsplash.com/photo-1582192903020-8a5e59dcdcf2?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDkxMjUwNDB8&ixlib=rb-4.1.0&q=85"
-                    alt="chair" />
-                <img src="https://images.unsplash.com/photo-1582192903020-8a5e59dcdcf2?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDkxMjUwNDB8&ixlib=rb-4.1.0&q=85"
-                    alt="chair" />
-                <img src="https://images.unsplash.com/photo-1582192903020-8a5e59dcdcf2?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDkxMjUwNDB8&ixlib=rb-4.1.0&q=85"
-                    alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs Small.png" alt="chair" />
             </div>
         </div>
     </div>
 
-    <img class='cartoon-maarten'
-        src='https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDkxMjc2MTR8&ixlib=rb-4.1.0&q=85'>
+    <img class='cartoon-maarten' src='/public/images/projects/maarten.png' alt='cartoon maarten' />
 
     <div class='theatre-row-3'>
         <div class="scroller" data-direction="left" data-speed="faster">
             <div class="scroller__inner">
-                <img src="https://images.unsplash.com/photo-1582192903020-8a5e59dcdcf2?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDkxMjUwNDB8&ixlib=rb-4.1.0&q=85"
-                    alt="chair" />
-                <img src="https://images.unsplash.com/photo-1582192903020-8a5e59dcdcf2?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDkxMjUwNDB8&ixlib=rb-4.1.0&q=85"
-                    alt="chair" />
-                <img src="https://images.unsplash.com/photo-1582192903020-8a5e59dcdcf2?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NDkxMjUwNDB8&ixlib=rb-4.1.0&q=85"
-                    alt="chair" />
+                <img src="/public/images/projects/theater-chairs-Small-back.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs-Small-back.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs-Small-back.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs-Small-back.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs-Small-back.png" alt="chair" />
+                <img src="/public/images/projects/theater-chairs-Small-back.png" alt="chair" />
             </div>
         </div>
     </div>
