--- a/server/components/text-slider/text-slider.liquid
+++ b/server/components/text-slider/text-slider.liquid
@@ -1,8 +1,10 @@
 {% block text-slider %}
 
-<div class="scroller" data-direction="left" data-speed="fast">
-    <div class="scroller__inner">
-        <h1>De man met de hamer |</h1>
+<div class="text-slider">
+    <div class="scroller" data-direction="left" data-speed="fast">
+        <div class="scroller__inner">
+            <h1>De man met de hamer |</h1>
+        </div>
     </div>
 </div>
 
