--- a/client/index.css
+++ b/client/index.css
@@ -16,6 +16,7 @@
 @import '../server/components/project-sorting/project-sorting.css';
 @import '../server/components/search-bar/search-bar.css';
 @import '../server/components/full-width-card/full-width-card.css';
+@import '../server/components/stage-lights/stage-lights.css';
 
 
 
