--- a/server/components/category-filter/category-filter.liquid
+++ b/server/components/category-filter/category-filter.liquid
@@ -3,7 +3,7 @@
     <div class="radio-group">
       <input type="radio" id="category-all" name="category-filter" value="all" class="filter-radio" checked>
       <label for="category-all" class="filter-btn" data-category="all">
-        Alles
+        ALL
       </label>
     </div>
     
