--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-  <header>
+  {% comment %} <header>
     <h1>De man met de hamer</h1>
-  </header>
+  </header> {% endcomment %}
   <main>
     {% block content %}{% endblock %}
   </main>
-  <footer>
+  {% comment %} <footer>
        <p>de man met de code productions</p>
-    </footer>
+    </footer> {% endcomment %}
 </body>
 </html>
