--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -17,9 +17,9 @@
 
 
 <body data-auto-init-popovers>
-  <header>
+  {% comment %} <header>
     <h1>De man met de hamer</h1>
-  </header> {% endcomment %}
+  </header>  {% endcomment %}
   <main>
     {% block content %}{% endblock %}
   </main>
