--- a/server/components/text-slider/text-slider.liquid
+++ b/server/components/text-slider/text-slider.liquid
@@ -1,7 +1,7 @@
 {% block text-slider %}
 
 <div class="text-slider">
-    <div class="scroller" data-direction="left" data-speed="fast">
+    <div class="scroller" data-direction="left" data-speed="slow">
         <div class="scroller__inner">
             <h1>De man met de hamer |</h1>
         </div>
