--- a/server/components/project-card/project-card.liquid
+++ b/server/components/project-card/project-card.liquid
@@ -1,48 +1,21 @@
 {% block project-card %}
-
-<div class="project-card {{ project.aspectRatioClass }}" data-pop-image>
+<div class="project-card {{ project.aspectRatioClass }}" 
+     data-project-data='{{ project | json }}'
+     data-pop-image>
     <div class="project-image-wrapper">
         <img src="{{ project.projectFeaturedImage }}" alt="{{ project.projectname }}" loading="lazy">
     </div>
-
+    
     <div class="project-info">
         <div class="project-details">
             <div class='project-details'>
                 <h2>{{ project.projectname }}</h2>
             </div>
-
+            
             <div class='category'>
                 <p>{{ project.category }}</p>
             </div>
         </div>
-
-        {% comment %} <div class="hover-details">
-            {% assign months_dutch =
-            "Januari,Februari,Maart,April,Mei,Juni,Juli,Augustus,September,Oktober,November,December" | split: ","
-            %}
-            {% assign month_number = project.projectDate | date: "%m" | minus: 1 %}
-            {% assign dutch_month = months_dutch[month_number] %}
-
-
-            {% if project.productionName and project.productionName != "" and project.productionName != nil %}
-            <p><strong>Productie: </strong> {{ project.productionName }}</p>
-            {% endif %}
-
-            {% if project.projectDate %}
-            <p><strong>Datum: </strong>{{ project.projectDate | date: "%e" }} {{ dutch_month }} {{
-                project.projectDate |
-                date: "%Y" }}</p>
-            {% endif %}
-
-            {% if project.forSale %}
-            <span class="for-sale-badge">Te koop</span>
-            {% endif %}
-        </div> {% endcomment %}
     </div>
 </div>
-
-{% render '../../components/pop-over/pop-over.liquid' %}
-
 {% endblock %}
-
-
