--- a/client/index.css
+++ b/client/index.css
@@ -22,5 +22,5 @@
 @import "../server/components/submarine/submarine.css";
 @import "../server/components/theatre-slider/theatre-slider.css";
 @import "../server/components/pop-over/pop-over.css";
-
+@import '../server/components/stage-lights/stage-lights.css';
 
