update submarine position

--- a/server/views/projects/projects.liquid
+++ b/server/views/projects/projects.liquid
@@ -44,5 +44,7 @@
   </div>
 </div>
 
+{% render '../../components/submarine/submarine.liquid' %}
+
 {% render '../../components/pop-over/pop-over.liquid' %}
 {% endblock %}
